welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: not found: value A
	if (u=A) {
              ^BDRBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (u=A) {
             ^BDRBuggle:6: error: not found: value B
	if (u=B) {
              ^BDRBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
	if (u=B) {
             ^BDRBuggle:9: error: not found: value C
	if (u=C) {
              ^BDRBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if (u=C) {
             ^BDRBuggle:13: error: not found: value Z
	if (u=Z) {
              ^BDRBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
	if (u=Z) {
             ^BDRBuggle:15: error: not found: value Y
	if (u=Y) {
              ^BDRBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
	if (u=Y) {
             ^BDRBuggle:18: error: not found: value X
	if (u=X) {
              ^BDRBuggle:18: error: type mismatch;
 found   : Unit
 required: Boolean
	if (u=X) {
             ^BDRBuggle:22: error: not found: value I
	if (u=I) {
              ^BDRBuggle:22: error: type mismatch;
 found   : Unit
 required: Boolean
	if (u=I) {
             ^BDRBuggle:26: error: not found: value L
	if (u=L) {
              ^BDRBuggle:26: error: type mismatch;
 found   : Unit
 required: Boolean
	if (u=L) {
             ^BDRBuggle:29: error: not found: value R
	if (u=R) {
              ^BDRBuggle:29: error: type mismatch;
 found   : Unit
 required: Boolean
	if (u=R) {
             ^